Click Chart (Show Popups, Hide Chart), Sidebar Collapse (Icon), Breadcrumb Fixing, Show Tooltip Hover Menu, Show Div Active Menu Sidebar, Responsive Sidebar Fixing

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -19,7 +19,7 @@ a:hover {
 	text-decoration: inherit;
 }
 .card {
-	border-radius: 1rem;
+	border-radius: 0.3rem;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 }
 .col {
